copy edits from Tom

--- a/app/about.html
+++ b/app/about.html
@@ -49,27 +49,22 @@
       <img class="profileImg" src="../images/TomSpeaking.jpg" />
     </div>
     <div class="frontPageTextBoxHeader">
-      <h1 class="headerText">About Tom Patterson</h1>
+      <h1 class="headerText">Tom Patterson</h1>
     </div>
 
 
     <div class="frontPageTextBox">
 
-    <p>
-        Tom Patterson has been writing about contemporary folk, visionary, and
-        outsider art for forty years and established a reputation as an
-        independently authoritative, critical voice in the field. He has
-        authored definitive books about this art and curated major exhibitions
-        that have had a significant influence on the field’s development.
-      </p>
-
       <p>
-        "Art is ubiquitous in everyday life. We encounter it practically from
-        birth, even if it doesn’t always speak to us. Critic and curator Tom
-        Patterson knows this." - Julian Stern (<a
-          href="http://brutforce.com/the-vernacular-of-tom-patterson/"
-          ><u>The Vernacular of Tom Patterson</u></a
-        >, 2015)
+        is a writer and independent curator based in the American South. He is the author of St.
+        EOM in The Land of Pasaquan (Jargon Society, 1987/University of Georgia Press, 2018)
+        and Howard Finster: Stranger from Another World, (Abbeville Press, 1989)—each in
+        collaboration with the artist—as well as Contemporary Folk Art: Treasures from the
+        Smithsonian American Art Museum (Watson-Guptill Publications, New York, 2001). His
+        writings have appeared in Afterimage, American Ceramics, American Craft, Aperture,
+        ARTnews, Art Papers, BOMB, Folk Art, New Art Examiner, Public Art Review, and Raw
+        Vision—the London-based international journal of outsider art, of which he is a former
+        U.S. editor.       
       </p>
 
     </div>
@@ -104,19 +99,17 @@
   <div class="frontPageTextBox">
 
 
-      <p>
-        Patterson is most widely known for his lavishly color-illustrated
-        biographies of Georgia visionaries Howard Finster and Eddie Owens Martin
-        (Howard Finster: Stranger from Another World, Abbeville Press; and St.
-        EOM in The Land of Pasaquan, Jargon Society, University of Georgia
-        Press), both originally published in the late 1980s, and since then he
-        has written extensively on the lives and work of other artists operating
-        with relative autonomy on the margins of the academic art system. The
-        phrase he coined and employs as the title of this book ironically
-        references the historical tendency to distinguish the work of such
-        artists from other contemporary art on the basis of its perceived
-        otherness.
-      </p>
+    <p>
+      From 1979 to 1984 he was director of Atlanta-based Pynyon Press. A former editor of
+      North Carolina’s monthly Arts Journal (1988-1990), he was a longtime visual-art
+      columnist for daily newspapers in North Carolina–the Charlotte Observer from 1992 to
+      1998, and the Winston-Salem Journal from 1988 to 2022. Since 1985 he has curated or cocurated exhibitions for the American Visionary Art Museum (Baltimore), the
+      Southeastern Center for Contemporary Art (Winston-Salem), Virginia Commonwealth
+      University’s Anderson Gallery (Richmond), the Jamaica Center for Arts and Learning
+      (Queens, NY), the Terra Museum of American Art (Chicago), the Gregg Museum of Art
+      and Design (Raleigh), and the Center on Contemporary Art (Seattle).
+    </p>
+
 
   </div>
 
@@ -128,7 +121,8 @@
 
       <div class="imageCaptionContainer imageCaptionContainerLeft"> 
         <p class="imageCaptionText" sstyle="line-height: 2em;">
-          Tom Patterson and Bernard Shatz
+          Tom Patterson and artist Bernard Schatz aka L-15, Charlottesville, Virginia, 1993. Photo
+          by Lynne Ingram.       
         </p>
     </div>
   </div>
