--- a/app/about.html
+++ b/app/about.html
@@ -48,23 +48,16 @@
     <div class="profileImgContainer">
       <img class="profileImg" src="../images/TomSpeaking.jpg" />
     </div>
-    <div class="frontPageTextBoxHeader">
+    <!-- <div class="frontPageTextBoxHeader">
       <h1 class="headerText">Tom Patterson</h1>
-    </div>
+    </div> -->
 
 
     <div class="frontPageTextBox">
+      <h2>Tom Patterson</h2>
 
       <p>
-        is a writer and independent curator based in the American South. He is the author of St.
-        EOM in The Land of Pasaquan (Jargon Society, 1987/University of Georgia Press, 2018)
-        and Howard Finster: Stranger from Another World, (Abbeville Press, 1989)—each in
-        collaboration with the artist—as well as Contemporary Folk Art: Treasures from the
-        Smithsonian American Art Museum (Watson-Guptill Publications, New York, 2001). His
-        writings have appeared in Afterimage, American Ceramics, American Craft, Aperture,
-        ARTnews, Art Papers, BOMB, Folk Art, New Art Examiner, Public Art Review, and Raw
-        Vision—the London-based international journal of outsider art, of which he is a former
-        U.S. editor.       
+        is a writer and independent curator based in the American South. He is the author of <i>St. EOM in The Land of Pasaquan</i> (Jargon Society, 1987/University of Georgia Press, 2018) and <i>Howard Finster: Stranger from Another World</i>, (Abbeville Press, 1989)—each in collaboration with the artist—as well as <i>Folk Art: Treasures from the Smithsonian American Art Museum</i> (Watson-Guptill Publications, New York, 2001). His writings have appeared in <i>Afterimage, American Ceramics, American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art Examiner, Public Art Review, and Raw Vision</i>—the London-based international journal of outsider art, of which he is a former U.S. editor.       
       </p>
 
     </div>
@@ -100,14 +93,7 @@
 
 
     <p>
-      From 1979 to 1984 he was director of Atlanta-based Pynyon Press. A former editor of
-      North Carolina’s monthly Arts Journal (1988-1990), he was a longtime visual-art
-      columnist for daily newspapers in North Carolina–the Charlotte Observer from 1992 to
-      1998, and the Winston-Salem Journal from 1988 to 2022. Since 1985 he has curated or cocurated exhibitions for the American Visionary Art Museum (Baltimore), the
-      Southeastern Center for Contemporary Art (Winston-Salem), Virginia Commonwealth
-      University’s Anderson Gallery (Richmond), the Jamaica Center for Arts and Learning
-      (Queens, NY), the Terra Museum of American Art (Chicago), the Gregg Museum of Art
-      and Design (Raleigh), and the Center on Contemporary Art (Seattle).
+      From 1979 to 1984 he was director of Atlanta-based Pynyon Press. A former editor of North Carolina's monthly <i>Arts Journal</i> (1988-1990), he was a longtime visual-art columnist for daily newspapers in North Carolina-the <i>Charlotte Observer</i> from 1992 to 1998, and the <i>Winston-Salem Journal</i> from 1988 to 2022. Since 1985 he has curated or cocurated exhibitions for the American Visionary Art Museum (Baltimore), the Southeastern Center for Contemporary Art (Winston-Salem), Virginia Commonwealth University's Anderson Gallery (Richmond), the Jamaica Center for Arts and Learning (Queens, NY), the Terra Museum of American Art (Chicago), the Gregg Museum of Art and Design (Raleigh), and the Center on Contemporary Art (Seattle).
     </p>
 
 
@@ -131,13 +117,7 @@
 
   <div class="frontPageTextBox">
     <p>
-      In addition to his books on St. EOM and Howard Finster, Patterson is the
-      author of “Contemporary Folk Art: Treasures from the Smithsonian
-      American Art Museum” (Watson-Guptill Publications, New York, 2001) and
-      several exhibition catalogs. Since the early 1980s his writings have
-      appeared in art magazines including afterimage, American Ceramics,
-      American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art
-      Examiner, Public Art Review and Raw Vision.
+      In addition to his books on St. EOM and Howard Finster, Patterson is the author of “Contemporary Folk Art: Treasures from the Smithsonian American Art Museum” (Watson-Guptill Publications, New York, 2001) and several exhibition catalogs. Since the early 1980s his writings have appeared in art magazines including afterimage, American Ceramics, American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art Examiner, Public Art Review and Raw Vision.
     </p>
   </div>
 
