improved responsiveness and sizing

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
         <div class="frontPageTextBox">
             <h4>Tom Patterson bids you Welcome.</h4>
-            <p> The Nerve Museum website is a forum for selected things I’ve written over the years - essays, reviews, articles, and other pieces that seem to have some continued relevance or retrospective value. The primary categories are contemporary art and culture, with a particular focus on what is now commonly called Outsider Art, after the title of an influential book by the late cultural scholar Roger Cardinal. As the author of books about Saint EOM (Eddie Owens Martin) and Howard Finster, both originally published in the late 1980s, I was pegged early in my career as an authority on Outsider Art in the American South. The only authority I claim is that of an attentive writer, but I admit to having a longstanding interest in and enthusiasm for the subject.
+            <p> The Nerve Museum website is a forum for selected things I've written over the years - essays, reviews, articles, and other pieces that seem to have some continued relevance or retrospective value. The primary categories are contemporary art and culture, with a particular focus on what is now commonly called Outsider Art, after the title of an influential book by the late cultural scholar Roger Cardinal. As the author of books about Saint EOM (Eddie Owens Martin) and Howard Finster, both originally published in the late 1980s, I was pegged early in my career as an authority on Outsider Art in the American South. The only authority I claim is that of an attentive writer, but I admit to having a longstanding interest in and enthusiasm for the subject.
             </p>
 
 
@@ -67,7 +67,7 @@
         <div class="frontPageTextBox">
             <h4>About the website name</h4>
             <p>
-                For the last thirty years and counting, my primary residence has been a 540-square-foot garret apartment in a 1920s bungalow in a small city in North Carolina. Most of the wall space is covered with paintings, drawings, photographs, and other works by artists I’ve written about or otherwise known personally, and most of the furniture stores a library of some 2,000 books. Volumes not shelved tend to be stacked on tables, chairs, or other available surfaces. Three walk-in closets function mainly as repositories for my archives and additional artworks.            
+                For the last thirty years and counting, my primary residence has been a 540-square-foot garret apartment in a 1920s bungalow in a small city in North Carolina. Most of the wall space is covered with paintings, drawings, photographs, and other works by artists I've written about or otherwise known personally, and most of the furniture stores a library of some 2,000 books. Volumes not shelved tend to be stacked on tables, chairs, or other available surfaces. Three walk-in closets function mainly as repositories for my archives and additional artworks.            
             </p>
             <p>
                 When my late brother J. Hunter Patterson visited, he (jokingly) observed that the place made him nervous, constantly concerned that he might accidentally knock something over and start a chain reaction of collapsing and overturned objects - a chaotic jumble of books and art. Hunter took to calling the premises my Nerve Museum.
@@ -110,7 +110,7 @@
             </div>
     
             <!-- <div class="imageCaptionContainer imageCaptionContainerLeft">
-                <p id="juliaSternExcerpt" class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
+                <p id="juliaSternExcerpt" class="imageCaptionText" sstyle="line-height: 2em;">"Patterson's roles as critic and curator are interwoven. In both cases I'm essentially involved with the same concerns–art and the way it's presented in museums and galleries. When writing as a critic, I'm an evaluator of art that I didn't select and curatorial decisions I didn't make. As a curator I'm an enthusiastic advocate for work that I've selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn't have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson's professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
                 <br/>
                 - Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)
                 </p>        
@@ -126,12 +126,12 @@
             and the creative imagination in the 1970s and 1980s:        
         </p>
         <p>
-            In the latter connection, the memoir project has been a spare-time endeavor pursued for entirely personal, creative reasons, without the benefit of a publisher’s advance. The only financial support for the project to date has been a $2,500 grant from my local arts council (a Duke Energy Artist Project Fellowship from the Arts Council of Winston-Salem and Forsyth County). In order to best serve the narrative, I have extended the timeline into my early thirties, but otherwise I’ve adhered to the original idea. Two chapters have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal, and “The Convivial Anarchists” in St. Andrews Review. 
+            In the latter connection, the memoir project has been a spare-time endeavor pursued for entirely personal, creative reasons, without the benefit of a publisher's advance. The only financial support for the project to date has been a $2,500 grant from my local arts council (a Duke Energy Artist Project Fellowship from the Arts Council of Winston-Salem and Forsyth County). In order to best serve the narrative, I have extended the timeline into my early thirties, but otherwise I've adhered to the original idea. Two chapters have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal, and “The Convivial Anarchists” in St. Andrews Review. 
         </p>
 
     </div>
     <div class="frontPageTextBox">
-        <h4>Chance Operations: A Fledgling Scribe’s Education (1971-1975);</h4>
+        <h4>Chance Operations: A Fledgling Scribe's Education (1971-1975);</h4>
     </div>
     <div class="frontPageTextBox">
         <h4>Bicentennial Blues: Seven Seasons on the American Social Margins (1976-1977);</h4>
@@ -142,7 +142,7 @@
     <div class="frontPageTextBox">
         <h4>Way Out There: Inside the Jargon Society (1984-1989).</h4>
         <p>
-            An early version of the first book’s opening chapter was published in 1984 as The Phantom Sheik, a chapbook from Binturong Press/The Bisbee Press Collective in Bisbee, Arizona. Slightly different versions of two chapters from the first book have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal (2017/2018), and “The Convivial Anarchists” in St. Andrews Review (2018). The entire third memoir was published in book form in 2021 by Hiding Press in collaboration with the Jargon Society. The other three are ostensibly complete and currently circulating among potential publishers, but in the meantime interested parties can read them here, piecemeal or in full, in or out of chronological order. For the most part, individual chapters are written to function independently as stand-alone stories. The author is grateful to the Arts Council of Winston-Salem and Forsyth County, North Carolina, for financial assistance through its artist fellowship program.
+            An early version of the first book's opening chapter was published in 1984 as The Phantom Sheik, a chapbook from Binturong Press/The Bisbee Press Collective in Bisbee, Arizona. Slightly different versions of two chapters from the first book have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal (2017/2018), and “The Convivial Anarchists” in St. Andrews Review (2018). The entire third memoir was published in book form in 2021 by Hiding Press in collaboration with the Jargon Society. The other three are ostensibly complete and currently circulating among potential publishers, but in the meantime interested parties can read them here, piecemeal or in full, in or out of chronological order. For the most part, individual chapters are written to function independently as stand-alone stories. The author is grateful to the Arts Council of Winston-Salem and Forsyth County, North Carolina, for financial assistance through its artist fellowship program.
         </p>
     </div>
 
