improved responsiveness and sizing

--- a/app/about.html
+++ b/app/about.html
@@ -48,16 +48,15 @@
     <div class="profileImgContainer">
       <img class="profileImg" src="../images/TomSpeaking.jpg" />
     </div>
-    <!-- <div class="frontPageTextBoxHeader">
-      <h1 class="headerText">Tom Patterson</h1>
-    </div> -->
+    <div class="frontPageTextBoxHeader">
+      <h1 class="headerText">Tom Patterson...</h1>
+    </div>
 
 
     <div class="frontPageTextBox">
-      <h2>Tom Patterson</h2>
 
       <p>
-        is a writer and independent curator based in the American South. He is the author of <i>St. EOM in The Land of Pasaquan</i> (Jargon Society, 1987/University of Georgia Press, 2018) and <i>Howard Finster: Stranger from Another World</i>, (Abbeville Press, 1989)—each in collaboration with the artist—as well as <i>Folk Art: Treasures from the Smithsonian American Art Museum</i> (Watson-Guptill Publications, New York, 2001). His writings have appeared in <i>Afterimage, American Ceramics, American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art Examiner, Public Art Review, and Raw Vision</i>—the London-based international journal of outsider art, of which he is a former U.S. editor.       
+        ...is a writer and independent curator based in the American South. He is the author of <i>St. EOM in The Land of Pasaquan</i> (Jargon Society, 1987/University of Georgia Press, 2018) and <i>Howard Finster: Stranger from Another World</i>, (Abbeville Press, 1989)—each in collaboration with the artist—as well as <i>Folk Art: Treasures from the Smithsonian American Art Museum</i> (Watson-Guptill Publications, New York, 2001). His writings have appeared in <i>Afterimage, American Ceramics, American Craft, Aperture, ARTnews, Art Papers, BOMB, Folk Art, New Art Examiner, Public Art Review, and Raw Vision</i>—the London-based international journal of outsider art, of which he is a former U.S. editor.       
       </p>
 
     </div>
