small tweaks to text

--- a/app/index.html
+++ b/app/index.html
@@ -125,9 +125,7 @@
             Four interlinked memoirs reflecting on art, culture, identity,
             and the creative imagination in the 1970s and 1980s:        
         </p>
-        <p>
-            In the latter connection, the memoir project has been a spare-time endeavor pursued for entirely personal, creative reasons, without the benefit of a publisher's advance. The only financial support for the project to date has been a $2,500 grant from my local arts council (a Duke Energy Artist Project Fellowship from the Arts Council of Winston-Salem and Forsyth County). In order to best serve the narrative, I have extended the timeline into my early thirties, but otherwise I've adhered to the original idea. Two chapters have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal, and “The Convivial Anarchists” in St. Andrews Review. 
-        </p>
+
 
     </div>
     <div class="frontPageTextBox">
@@ -142,7 +140,7 @@
     <div class="frontPageTextBox">
         <h4>Way Out There: Inside the Jargon Society (1984-1989).</h4>
         <p>
-            An early version of the first book's opening chapter was published in 1984 as The Phantom Sheik, a chapbook from Binturong Press/The Bisbee Press Collective in Bisbee, Arizona. Slightly different versions of two chapters from the first book have been previewed in regional literary journals - “Reconstituting Black Mountain” in Appalachian Journal (2017/2018), and “The Convivial Anarchists” in St. Andrews Review (2018). The entire third memoir was published in book form in 2021 by Hiding Press in collaboration with the Jargon Society. The other three are ostensibly complete and currently circulating among potential publishers, but in the meantime interested parties can read them here, piecemeal or in full, in or out of chronological order. For the most part, individual chapters are written to function independently as stand-alone stories. The author is grateful to the Arts Council of Winston-Salem and Forsyth County, North Carolina, for financial assistance through its artist fellowship program.
+            An early version of the first book's opening chapter was published in 1984 as <i>The Phantom Sheik</i>, a chapbook from Binturong Press/The Bisbee Press Collective in Bisbee, Arizona. Slightly different versions of two chapters from the first book have been previewed in regional literary journals - “Reconstituting Black Mountain” in <i>Appalachian Journal</i> (2017/2018), and “The Convivial Anarchists” in <i>St. Andrews Review</i> (2018). The entire third memoir was published in book form in 2021 by Hiding Press in collaboration with the Jargon Society. The other three are ostensibly complete and currently circulating among potential publishers, but in the meantime interested parties can read them here, piecemeal or in full, in or out of chronological order. For the most part, individual chapters are written to function independently as stand-alone stories. The author is grateful to the Arts Council of Winston-Salem and Forsyth County, North Carolina, for financial assistance through its artist fellowship program.
         </p>
     </div>
 
