small tweaks to work page

--- a/app/memoir.html
+++ b/app/memoir.html
@@ -43,9 +43,9 @@
         <div class="frontPageTextBoxHeader">
           <h1 class="headerText">My Memoir</h1>
           <h3 class="headerSubText">The Tom Patterson Years: Cultural Adventures of a Fledgling Scribe</h3>
-          <h3 class="headerSubText" >
+          <!-- <h3 class="headerSubText" >
             <a href="./images/Chance Operations Part 1.pdf" download>Download Part One Here.</a>
-          </h3>
+          </h3> -->
           <h3 class="headerSubText" >
             <a href="https://www.hidingpress.com/books/the-tom-patterson-years-cultural-adventures-of-a-fledgling-scribe-jargon-117" target="_blank">Full Copies now available for Purchase!</a>
           </h3>
@@ -53,7 +53,11 @@
 
         <div class="frontPageTextBox">
             <!-- <h3>Chance Operations - A Memoir by Tom Patterson</h3> -->
-    
+          <p>
+            The third book in the memoir quartet can be read in print format in the 2021 Hiding
+            Press/Jargon edition described in the following press release from the publisher,
+            including a link for ordering copies:
+          </p>
             <!-- <p>
                 After at least one esteemed colleague, having been regaled with stories of my past, insisted I ought to write a memoir and goaded me repeatedly about it, I decided to take up the challenge. Writing “the story of my life” wasn’t the idea. Instead, I set out to write an account of my twenties - the decade I spent stumbling and experimenting and failing and succeeding to invent my adult, professional, social self, the mask of personal identity I wear. The project took on a life of its own and became a dominant theme for the better part of a decade, during which I’ve gone at it steadily although in necessarily piecemeal fashion, working around intermittent writing assignments, copy deadlines, curatorial projects, and other obligations undertaken for income-generating purposes.
             </p>
