--- a/app/work.html
+++ b/app/work.html
@@ -44,18 +44,28 @@
       </div>
 
       <div class="frontPageTextBox">
-        <h2>PARALLEL ART UNIVERSE:
-          Selected Writings on Contemporary Folk, Visionary, and Outsider Art</h2>
-        <p>Parallel Art Universe brings together some of Patterson’s most informative,
-          insightful, and provocative writings on the field over the years since his books on Finster
-          and Martin were published. These essays, artist profiles, and related reminiscences
-          were originally published, in slightly different form, in various exhibition catalogs and in
-          magazines including Art Papers, Folk Art. and Raw Vision.</p>
-          <p>Patterson writes informatively and in an accessible, often entertaining manner
-            about a sprawling, dynamic, unruly subset of the art world that has drawn steadily
-            increasing public attention since the 1970s. His Parallel Art Universe stands an
-            important addition to the growing body of critical literature and art-historical scholarship
-            related to the field.</p>
+        <p>Tom Patterson has been writing about contemporary folk, visionary, and outsider
+          art since the 1980s, establishing a reputation as an independently authoritative, critical
+          voice in the field. He has authored definitive books about this art and curated major
+          exhibitions of work by some of its most distinctive exponents.
+          Patterson is most widely known for his lavishly color-illustrated biographies of
+          Georgia visionaries Howard Finster and Eddie Owens Martin (Howard Finster: Stranger
+          from Another World, Abbeville Press; and St. EOM in The Land of Pasaquan, Jargon Society,
+          University of Georgia Press), both originally published in the late 1980s, and since then
+          he has written extensively on the lives and work of other artists operating with relative
+          autonomy on the margins of the academic art system. The phrase he coined and
+          employs as the title of this book ironically references the historical tendency to
+          distinguish the work of such artists from other contemporary art on the basis of its
+          perceived otherness.
+          Parallel Art Universe brings together some of Patterson's most informative and
+          provocative writings on the field over the years since his books on Finster and Martin were published. These essays, artist profiles, and related reminiscences were originally
+          published in exhibition catalogs and magazines including Art Papers, Folk Art and Raw
+          Vision.
+          Patterson writes informatively and accessibly about a sprawling, dynamic,
+          unruly subset of the art world that has drawn steadily increasing public attention since
+          the 1970s. His Parallel Art Universe stands an important addition to the growing body of
+          critical literature and art-historical scholarship related to the field.
+        </p>
       </div>
 
       <div class="collapsibleListsContainer">
